fix: Added a better color for CSS class 'checkUseOfLongSentence-VeryLong' and fixed flaw in checkIncorrectPunctuationSpacing()

--- a/css/rules.css
+++ b/css/rules.css
@@ -22,12 +22,12 @@
   background-color: #f6d167;
 }
 
-.checkUseOfLongSentence-Long {
+.checkUseOfLongSentence-Long {  
   background-color: #4dccbd;
 }
 
 .checkUseOfLongSentence-VeryLong {
-  background-color: #5863f8;
+  background-color: #8f96fc;
 }
 
 .checkDuplicateWords {
